W5-008 : Added option for reader to filter articles by month

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ input[type=submit], input[type=button] {
   cursor: pointer;
 }
 
-#aFilter, #cFilter, #idButton, #titleButton{
+#aFilter, #cFilter, #idButton, #titleButton, #monthButton{
 width: 100%;
 background-color: rgb(57, 80, 203)
 }
