--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   resize: none;
 }
 
-input[type=password], input[type=email]{
+input[type=password], input[type=email] {
   width: 20%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -20,11 +20,11 @@ input[type=password], input[type=email]{
   box-sizing: border-box;
 }
 
-#bpass, #vbpass, #upass, #vupass, #bemail, #uemail ,#rec_email, #changePass{
+#bpass, #vbpass, #upass, #vupass, #bemail, #uemail, #rec_email, #changePass {
   width: 100%;
 }
 
-#forgotPass{
+#forgotPass {
   float: right
 }
 
@@ -51,7 +51,7 @@ input[type=text], select {
 }
 
 #bloggername, #username {
-width: 20%;
+  width: 20%;
 }
 
 input[type=submit], input[type=button] {
@@ -66,26 +66,22 @@ input[type=submit], input[type=button] {
   cursor: pointer;
 }
 
-#aFilter, #cFilter, #idButton, #titleButton, #monthButton{
-width: 100%;
-background-color: rgb(57, 80, 203)
+input[type=submit]:hover {
+  background-color: #45a049;
 }
 
-#subB, #subU, #emailButton, #submitPassword{
+input[type=button]:hover {
+  background-color: #45a049;
+}
+
+#aFilter, #cFilter, #titleButton, #monthButton {
   width: 100%;
+  padding: 10px;
+  float: left
 }
 
-#postComment{
-  white-space: normal;
-  width: 15%;
-  height: 8%;
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer
+#subB, #subU, #emailButton, #submitPassword, #more_fields, #apply {
+  width: 100%;
 }
 
 #submitBlog {
@@ -99,6 +95,11 @@ background-color: rgb(57, 80, 203)
   cursor: pointer;
 }
 
+.deleteComment {
+  color: blue;
+  cursor: pointer;
+  float: right;
+}
 
 #tbl {
   margin-left: auto;
@@ -106,48 +107,91 @@ background-color: rgb(57, 80, 203)
   width: 50em
 }
 
-#comments {
-  box-sizing: border-box;
-  display: block;
-  float: none;
-  line-height: 15px;
-  position: static;
-  z-index: auto
-}
-
-input[type=submit]:hover {
-  background-color: #45a049;
-}
-
 div {
-  border-radius: 5px;
-  background-color: #f2f2f2;
   padding: 20px;
-}
-
-#signupb{
-float: left;
 }
 
 #categoryfilter {
   float: left;
   width: 250px;
   height: 250px;
-  margin-left: 15px
+  margin-left: 15px;
+}
+
+#signupb {
+  float: left;
 }
 
 #readerblogList, #blgList {
   margin-left: auto;
   margin-right: auto;
-  width: 50em
+  width: 50em;
+  float: left
 }
 
-#Recovery, #Change{
+.blogs {
+  background-color: white;
+  border-style: solid;
+  border-color: #45a049;
+  margin-top: 10px;
+}
+
+#commentsection {
+  background-color: rgba(83, 230, 128, 0.65);
+  border-style: solid;
+  border-color: #45a049;
+  margin-top: 10px;
+}
+
+#comments {
+  background-color: white;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: 10px;
+  display: inline-grid;
+  box-sizing: border-box;
+  float: none;
+  line-height: 15px;
+  position: static;
+  z-index: auto
+}
+
+.bcomments {
+  background-color: white;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: 10px;
+  display: inline-grid;
+  box-sizing: border-box;
+  float: none;
+  line-height: 15px;
+  position: static;
+  z-index: auto
+}
+
+#Recovery, #Change {
   margin: auto;
   width: 40%
 }
 
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  opacity: 0.8;
+  transition: opacity 0.3s;
+  Position the tooltip */ position: absolute;
+  z-index: 1;
+}
 
-#goBack{
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
+#goBack {
   float: right
 }
